# MSBuildCMake

./: CompileException.cs  CustomBuildTask.csproj  LICENSE  MSBuildCMake.SDK.csproj  NativeCompilationTask.cs  README.md  RIDParser.cs  custombuildtaskcommon.cmake
.github/workflows/: dotnet.yaml
CMake/: CMake.cs
Sdk/: GetEffectiveRuntimeIdentifier.props  GetPathToTask.props  Sdk.props  Sdk.targets
TestProject.DependsOnManaged/: Class1.cs  TestProject.DependsOnManaged.csproj
TestProject.Managed/: Class1.cs  TestProject.Managed.csproj  nuget.config
TestProject.Native/: .gitignore  CMakeLists.txt  README.md  TestProject.Native.nativeproj  nuget.config
TestProject.Native/cmake/: idesupport.cmake
TestProject.Native/testsharednative/: main.cpp
compiled/: CustomBuildTask.deps.json
crosscomp/: GCCARM64.cmake  MingW64.cmake  MingWARM64.cmake  osxcross32.cmake  osxcross64.cmake  osxcrossarm64.cmake
